# icw

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Guardfile  HISTORY.md  Makefile  Procfile  README.md  app.yaml  appengine_config.py  clean-old.sh  config.rb  cron.py  cron.yaml  dispatch.yaml  docker-compose.yml  fly.toml  gae_lib.pth  pyproject.toml  requirements.txt  requirements_gae.txt  requirements_local.txt  run.py  setup.cfg  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/workflows/: docs.yml  python-package.yml  python-publish.yml
docs/: conf.py  index.rst
icw/: __init__.py  config.py  converter.py  forms.py  views.py
icw/static/css/: style.css
icw/static/css/scss/: style.scss
icw/static/js/: inputFileButton.js
icw/templates/: base.html  error.html  index.html  success.html
lib/: README.md
licenses/: FLASK  FLASK-WTF
src/icw/: __init__.py  config.py  converter.py  forms.py  views.py
src/icw/static/css/: style.css
src/icw/static/css/scss/: style.scss
src/icw/templates/: base.html
tests/: conftest.py  gae_pathfix.py  test_config.py  test_fail.py  test_success.py  test_upload.py
tests/fail_files/: fail_2_digit_years.csv  fail_bad_header.csv  fail_blank_subject.csv  fail_blank_subject_spaces.csv  fail_extra_header.csv  fail_missing_endtime.csv  fail_missing_header.csv  fail_missing_startdate.csv  fail_timeformat.csv
tests/success_files/: success.csv  success_24h_time.csv  success_allday_multiday.csv  success_extra_spaces.csv  success_latin1.csv  success_no_end_date.csv  success_skipped_fields.csv  success_skipped_row.csv  success_spec_chars.csv  success_unicode.csv  success_utf8bom.csv
