[build-system]
requires = ["setuptools>65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target_version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
order_by_type = false
line_length = 79

[project]
name = "icw"
urls = {homepage = "https://github.com/n8henrie/icw"}
dynamic = ["version", "readme"]
license = { text = "MIT" }
description = "ICS converter webapp"
authors = [ {name = "Nathan Henrie", email = "nate@n8henrie.com"} ]
keywords = [ "ics", "icalendar", ]
classifiers= [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "chardet==2.3.0",
    "Flask-Bootstrap==3.3.7.1",
    "Flask-WTF==1.0.1",
    "flask==2.2",
    "gunicorn==20.1.0",
    "icalendar==4.1.0",
    "WTForms==2.0.2",
]

[tool.setuptools]
zip-safe = false

[project.optional-dependencies]
test = [
    "black==22.8.0",
    "flake8-docstrings==1.6.0",
    "flake8-import-order==0.18.1",
    "mypy==0.971",
    "pep8-naming==0.13.2",
    "pylint==2.15.0",
    "pytest==7.1.3",
    "tox==3.25.1",
]
dev = [
    "build==0.8.0",
    "myst-parser==0.18.0",
    "sphinx-rtd-theme==1.0.0",
    "Sphinx==5.0.2",
    "twine==4.0.1",
]

[tool.setuptools.dynamic]
version = {attr = "icw.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"]}
