[metadata]
name = icw
url = https://github.com/n8henrie/icw
version = attr: icw.__version__
license = MIT
license_files = LICENSE
description = "ICS converter webapp"
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Nathan Henrie
author_email = nate@n8henrie.com
keywords = ics icalendar
classifiers=
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    build==0.7.0
    chardet==2.3.0
    Flask-Bootstrap==3.3.5.7
    Flask-WTF==0.11
    flask==0.10.1
    gunicorn==20.1.0
    icalendar==3.9.1
    itsdangerous==2.0.1
    Jinja2==2.8
    MarkupSafe==2.0.1
    pip==22.0.4
    werkzeug==0.16.1
    WTForms==2.0.2

[options.extras_require]
test =
    black==21.5b1
    flake8==3.3.0
    flake8-docstrings==1.1.0
    flake8-import-order==0.12
    mypy==0.501
    pep8-naming==0.4.1
    pylint==1.7.1
    pytest==6.2.3
    tox==3.23.0
dev =
    build==0.6.0.post1
    recommonmark==0.4.0
    sphinx-rtd-theme==0.1.9
    Sphinx==1.4.9
    twine==3.4.2
    wheel==0.37.0

[options.packages.find]
where=src
