[metadata]
name = icw
url = https://github.com/n8henrie/icw
version = attr: icw.__version__
license = MIT
license_files = LICENSE
description = "ICS converter webapp"
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Nathan Henrie
author_email = nate@n8henrie.com
keywords = ics icalendar
classifiers=
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    chardet==2.3.0
    Flask-Bootstrap==3.3.7.1
    Flask-WTF==1.0.1
    flask==2.2
    gunicorn==20.1.0
    icalendar==3.9.1
    WTForms==2.0.2

[options.extras_require]
test =
    black==22.3.0
    flake8-docstrings==1.6.0
    flake8-import-order==0.18.1
    mypy==0.961
    pep8-naming==0.13.0
    pylint==2.14.3
    pytest==7.1.2
    tox==3.25.0
dev =
    build==0.8.0
    myst-parser==0.18.0
    sphinx-rtd-theme==1.0.0
    Sphinx==5.0.2
    twine==4.0.1

[options.packages.find]
where=src
